@@ -9,13 +9,12 @@ EBUILD gnu-classpath-0.97-r1.ebuild 3384 RMD160 840c319ebe95c85ffc8d64b031cd180e
 EBUILD gnu-classpath-0.97.2.ebuild 2524 RMD160 78139abe1f2de7d3f766ccc3a98826079b4235ac SHA1 9d06a0bf13796548a8dcfc7765101e90eeba5b28 SHA256 bc56589cd40ee00a01fff127088f93cc243111cbf6f0740ad871bd0cf306af70
 EBUILD gnu-classpath-0.98-r1.ebuild 3423 RMD160 9bf350d13938665fe573860aeee9567d74071074 SHA1 14d37633006a58876adcd5a9cc6855e63ab948c2 SHA256 09e51d2863f766df75bd722c0cd7066e2c294d994416703c13f896083fae5333
 EBUILD gnu-classpath-0.98-r2.ebuild 3430 RMD160 b16ebe3f8c5d777c3121122945e87aae63e343cb SHA1 fce04ea28734d4f74f48b07a7bc73fee49da93d7 SHA256 0c0612b540b8e4671c7362b27a23034da00fe63e2129fe72634c991b26ba922b
-EBUILD gnu-classpath-0.98.ebuild 3033 RMD160 35971bad90131ad3a75358334403eca4f7941b14 SHA1 a23a64a1d894161f3e6ddaa861c5c375a5b82fe9 SHA256 a39d03678ebb23e4bcc513f258f3327d0bceccff3c356e489e7e6324145ad54c
-MISC ChangeLog 14758 RMD160 5920ddc746d7cf8b1e8d41b404ceb014be2cc95c SHA1 33c2d9b1d291588846f57fc83baddc44334f33f3 SHA256 18e8545e89765a6f4a4a939e95dc83b7f09523b7b1a59307da5b689c5fee2a8b
+MISC ChangeLog 14866 RMD160 4ed5a14dc52d87c60fcae4325ac51b3ffa70ee05 SHA1 5bf8cbfe64b59841d157edc03c083a9a962a1ddd SHA256 61c395ef195965671be1b5f3d0fc62e74b28d9530b33b33fe6c5f587c5df8f6e
 MISC metadata.xml 456 RMD160 36f9f9619fd32cdfec79883a039433e4473f7f9f SHA1 4bd8e09e3b936882112ba76e7d8a820aa1c0d738 SHA256 ce74184ed34e49a121939077d436c7b73eff7b046f5367d2241d7d2d8f0a6061
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktIjs0ACgkQcxLzpIGCsLR2hgCeJ+6iZh+c4f2aVV1rdq+UWVKK
-kVQAn2HsqaBP/46AvEA4WEwMY+z6XRfW
-=qSmS
+iEYEARECAAYFAktIkaQACgkQcxLzpIGCsLR4EACggO1rNZXa9Edx3HiM01zxeLCj
+TKgAn1ljSIE9HcV7i2eKz21xMKLawLPg
+=aOLR
 -----END PGP SIGNATURE-----
